--- a/00.md
+++ b/00.md
@@ -8,8 +8,8 @@
 
 我先介绍一下我自己个人的背景。我过去是个程序员，练了十年技术。梦想打造 SaaS 平台盖独角兽。结果人生第一桶金却是靠开课赚的。
 
-* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。上课人次超过 1500 人。当年营收八位数字新台币。
-* 2016 我在中国开设的编程课、学习课，上课人次超过 3000 人。当年营收八位数字人民币。
+* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。上课人次超过 1500 人。当年营收八位数字新台币。
+* 2016 我在中国开设的编程课、学习课，上上课人次超过 3000 人。当年营收八位数字人民币。
 * 开设的课程学生留存率以及学成率是业界的至少 4 倍以上。
 
 就教学这个领域，算是一份还不错的成绩单。
@@ -18,11 +18,11 @@
 
 开课这门技术，说起来很简单，但也可能很难。
 
-简单的部分在于，如果你是一个网红。你不需要学生，你只需要人脉粉丝，就能开课，并且累积还不错的收入。
+简单的部分在于，如果你是一个网红。你不需要学生，你只需要人脉粉丝，就能开课，并且累积还不错的收入。
 
-难的部分在于，如果你真是一个网红，相信只靠人脉粉丝就能开课。那么你的课，多半可能会变成两梯死。第一梯，亲友来上。第二梯，亲友的亲友来上。然后，就没有然后了。
+难的部分在于，如果你真是一个网红，相信只靠人脉粉丝就能开课。那么你的课，多半会变成两梯死。第一梯，亲友来上。第二梯，亲友的亲友来上。然后，就没有然后了。
 
-光是两梯的收入，是不值得你辞掉工作专心从事教学行业的。更何况，如果你不能从此跳脱上班行业，教出这么多学生后再回去行业，你可能会面对的是更大的同业竞争。
+光是两梯的收入，是不值得你辞掉工作专心从事教学行业的。更何况，如果你不能从此跳脱上班行业，教出这么多学生后再回去行业，你可能会面对更大的同业竞争。
 
 所以，你需要的是一套可持续的开课模式。从此变成该领域教学界的一方霸主
 
