--- a/00.md
+++ b/00.md
@@ -4,14 +4,14 @@
 
 以前将专业的技术练到顶尖，也只能将时间卖出一份（你的老板），平时攒积了一份ＳＯＰ却不知道可以卖给第二个第三个谁。
 
-然而当今时代不同了。如果你的技艺真的够好，透过卖课，如果课够好，受众够广。卖课的钱甚至可以远超创业收入。财富自由。
+然而当今时代不同了。如果你的技艺真的够好，透过卖课，如果课够好，受众够广。收入甚至可以远超创业收入。财富自由。
 
 问题是，怎么开始？又怎么持续？
 
 我先介绍一下我自己个人的背景。我过去是个程序员，练了十年技术。梦想打造 SaaS 平台盖独角兽。结果人生第一桶金却是靠开课赚的。
 
-* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。上课人次超过 1500 人。当年营收八位数字新台币。
-* 2016 我在中国开设的编程课、学习课，上上课人次超过 3000 人。当年营收八位数字人民币。
+* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。超过 1500 人次上课。当年营收八位数字新台币。
+* 2016 我在中国开设的编程课、学习课，超过 3000 人次上课。当年营收八位数字人民币。
 * 开设的课程学生留存率以及学成率是业界的至少 4 倍以上。
 
 就教学这个领域，算是一份还不错的成绩单。
