--- a/00.md
+++ b/00.md
@@ -10,13 +10,13 @@
 
 我先介绍一下我自己个人的背景。我过去是个程序员，练了十年技术。梦想打造 SaaS 平台盖独角兽。结果人生第一桶金却是靠开课赚的。
 
-* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。超过 1500 人次上课。当年营收八位数字新台币。
+* 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。超过 1500 人次上课。当年营收八位数字新台币。
 * 2016 我在中国开设的编程课、学习课，超过 3000 人次上课。当年营收八位数字人民币。
 * 开设的课程学生留存率以及学成率是业界的至少 4 倍以上。
 
 就教学这个领域，算是一份还不错的成绩单。
 
-后来从教学界离开，纯粹是因为终于累积够资本，去实现其他的梦想。（考虑到我在转职成老师前，从未受过专业教学训练。）
+后来从教学界离开，纯粹是因为终于累积够资本，去实现其他的梦想。（考虑到我在转职成老师前，从未受过专业教学训练。）
 
 开课这门技术，说起来很简单，但也可能很难。
 
