--- a/00.md
+++ b/00.md
@@ -1,4 +1,4 @@
-# 开课的技术 -- 前言
+# 开课的技术 — 前言
 
 这几年知识付费意识兴起，成熟的平台，方便的付款机制。给了大家一个将一身武艺可以变现的机会。
 
@@ -8,35 +8,36 @@
 
 问题是，怎么开始？又怎么持续？
 
-我先介绍一下我自己个人的背景。我过去是个程序员，练了十年技术。梦想打造 SaaS 平台盖独角兽。结果人生第一桶金却是靠开课赚的。
+我先自我介绍一下过去背景。我曾经是个程序员，练了十年技术。最大的梦想是打造 SaaS 平台盖独角兽。
+
+结果人生第一桶金却是因为开课而来。
 
 * 2015 我在台湾开设的编程课、增长课，均为当年台湾最畅销之课程。超过 1500 人次上课。当年营收八位数字新台币。
 * 2016 我在中国开设的编程课、学习课，超过 3000 人次上课。当年营收八位数字人民币。
 * 开设的课程学生留存率以及学成率是业界的至少 4 倍以上。
 
-就教学这个领域，算是一份还不错的成绩单。
+在教学这个领域，当时还算是一份还不错的成绩单。
 
-后来从教学界离开，纯粹是因为终于累积够资本，去实现其他的梦想。（考虑到我在转职成老师前，从未受过专业教学训练。）
+后来从教学界离开，纯粹是因为终于累积够资本，去实现其他的梦想。
 
-开课这门技术，说起来很简单，但也可能很难。
+若要我总结这段经历。我认为“开课”这门技术，说起来很简单，但也可能很难。
 
-简单的部分在于，如果你是一个网红。你不需要学生，你只需要人脉粉丝，就能开课，并且累积还不错的收入。
+简单的部分在于，如果你是一个网红。其实你不需要学生，你需要的是粉丝，瞬间就能累积还不错的收入。
 
-难的部分在于，如果你真是一个网红，相信只靠人脉粉丝就能开课。那么你的课，多半会变成两梯死。第一梯，亲友来上。第二梯，亲友的亲友来上。然后，就没有然后了。
+难的部分在于，如果你真是一个网红，相信只靠人脉粉丝就能开课。那么你的课，多半会变成两梯死。
 
-光是两梯的收入，是不值得你辞掉工作专心从事教学行业的。更何况，如果你不能从此跳脱上班行业，教出这么多学生后再回去行业，你可能会面对更大的同业竞争。
+第一梯，亲友来上。第二梯，亲友的亲友来上。然后，就没有然后了。
 
-所以，你需要的是一套可持续的开课模式。从此变成该领域教学界的一方霸主
+光是这两梯的收入，其实就结果来说，并不值得辞掉工作，转进教学行业的。如果你开的课是两班死，教出这么多学生后再回去上班，你可能会面对更大的同业竞争。
 
-最终目的是：
+所以，你需要的是一套开班以后就一直能保持竞争力的开课技术。可持续、可延展，甚至最后有机会变成该领域教学界的一方霸主。
 
 * 能够梯梯爆满
 * 有高口碑
 * 有高学成率
-* 能够垄断市场
 
-在这套课程当中，我会传授这当中的技巧。
+在这本书当中，我会整理过去我所累积的一系列技巧。包括如何选题、如何定位、如何引流、如何设计教学结构，如何提升学成率以及口碑。
 
-包括如何选题、如何定位、如何引流、如何设计教学结构，如何提升学成率以及口碑。
+希望能为更多达人，愿意出来开课。
 
-P.S. 这本书里面唯独我不会谈的是 <<教学的技术>>，若有学习「教学技巧」的需求，请阅读我的老师王永福老师的书：https://www.books.com.tw/products/0010810862　<<教学的技术>>。
+P.S. 这本书里面唯独我不会谈的是 <<教学的技术>>，若有学习“教学技巧”的需求，请阅读我的老师王永福老师的书：https://www.books.com.tw/products/0010810862　<<教学的技术>>。
