--- a/01.md
+++ b/01.md
@@ -7,9 +7,9 @@
 3. 上课
 4. 练习与口碑
 
-作为一个爱学习的职业学生。有时候会常常看到一个很奇怪的情形。
+作为一个爱学习的职业学生。有时候会常常看到一个很奇怪的情形。
 
-某一个老师，讲的东西行内的人都批评很浅。课却卖得非常好。但是有些老师在业界职业素养很深，但是开课却是两梯死。
+某一个老师，讲的东西行内的人都批评很浅。课却卖得非常好。但是有些老师在业界职业素养很深，但是开课却是两梯死。
 
 有些老师明明有一阵子，课开得很好，也很畅销。后面却开不下去了。
 
@@ -31,15 +31,15 @@
 
 但是这个稀缺，如果一开始把握不住。通常后续只能开两梯。第一梯，是老师亲友来上，第二梯，是亲友上了之后觉得还可以，让他朋友来上。然后呢？就没有然后了。
 
-为什么会有这种现象呢？
+为什么会有这种现象呢？
 
-江湖上可能是真有稀缺的。所以第一批以及第二批的人，肯定是不管质量与效果，冲上来就直接付钱的。
+江湖上可能是真有稀缺的。所以第一批以及第二批的人，肯定是不管质量与效果，冲上来就直接付钱的。
 
-而外围的学生，属于观望群。他可能不知道你，或知道你但对你不够信任。得看前两批吃蟹的人的学习效果或口碑，才会付费报名。
+而外围的学生，属于观望群。他可能不知道你，或知道你但对你不够信任。得看前两批吃蟹的人的学习效果或口碑，才会付费报名。
 
 如果一个老师在短短的两梯之内没有生成好口碑，后续再开成的机会就非常渺茫。
 
-## 不是课不够好，而是定位不够精准
+## 不是课不够好，而是定位不够精准
 
 会陷入两梯死的课与老师，有一个共同特点，就是它们通常是「原料班」。
 
@@ -47,9 +47,9 @@
 
 老师不但没有教学技巧可言，学生也不确定会收到什么成果。
 
-老师一厢情愿的热血倾囊相受，学生交钱了被绑架的死嗑教材作业。
+老师一厢情愿的热血倾囊相受，学生交钱了被绑架的死嗑教材作业。
 
-这样的情形，要说出什么口碑与学成效果的，还真是很难。
+这样的情形，要说出什么口碑与学成效果的，还真是很难。
 
 更不用说之后的转介绍。
 
@@ -61,7 +61,7 @@
 * 上课成果容易验收
 * 好口碑容易传播散播
 
-## 成才定位：成才率才是一切
+## 成才定位：成才率才是一切
 
 课，其实也是商业产品的一种。既然是产品，就要解决用户的需求。
 
@@ -75,13 +75,13 @@
 
 一上来就是希望将学生完全教会，干货无保留大放送。
 
-其实，像我这种程度好的职业学生，是很喜欢去上开课老师的第一次课的。因为这种老师第一次通常会用力过猛，该教的不该教的全部都教。我可以学到很多。而且我知道，这种老师要是没有人引导他的话，通常两梯就死了。此时不上待何时。
+其实，像我这种程度好的职业学生，是很喜欢去上开课老师的第一次课的。因为这种老师第一次通常会用力过猛，该教的不该教的全部都教。我可以学到很多。而且我知道，这种老师要是没有人引导他的话，通常两梯就死了。此时不上待何时。
 
-但是那些基础普通的一般学生，上道这种课就很痛苦了。不知道要从哪里入手，回去也不知道如何实践课堂所学。
+但是那些基础普通的一般学生，上道这种课就很痛苦了。不知道要从哪里入手，回去也不知道如何实践课堂所学。
 
 有一些职业老师会跟我抱怨，它们认为这是知识的诅咒。他知道很多，但却教不完，教不好。
 
-我说 bullshit，那是你用错角度去规划。
+我说 bullshit，那是你用错角度去规划。
 
 一般而言。我认为绝大多数的课组织架构所以烂，是因为有三个角度去影响了这个课的走向：
 
@@ -93,7 +93,7 @@
 
 因为老师是十年大师，要靠一门课，就将刚入门的学生，教到跟他一样程度。这怎么可能？
 
-结果就是教材真的很扎实，但是学生没有一个人学的会。
+结果就是教材真的很扎实，但是学生没有一个人学的会。
 
 ### 第二、学生视角
 
@@ -109,11 +109,11 @@
 
 绝大多数拜师的人，他只想要学会并且有机会达成的阶段。是从入门 => 新手。或者是新手 => 高级新手。
 
-而它们最需要的，其实就是一份能照著做的 SOP。就这么简单而已。
+而它们最需要的，其实就是一份能照著做的 SOP。就这么简单而已。
 
-但是，这里有一个政治正确的问题。即便老师知道了学生想要的就是入门 SOP。却往往浮上道德感罪恶：「只教这样够吗？这样不会太少吗？这样就能收钱我是不是太诈骗了阿....」
+但是，这里有一个政治正确的问题。即便老师知道了学生想要的就是入门 SOP。却往往浮上道德感罪恶：「只教这样够吗？这样不会太少吗？这样就能收钱我是不是太诈骗了阿....」
 
-### 第三、吃瓜群众视角
+### 第三、吃瓜群众视角
 
 其实，干扰因素最大甚至是旁边吃瓜群众。
 
@@ -121,17 +121,17 @@
 
 但旁边没有要学的吃瓜的人，往往会吐槽『你收这么贵的钱，教这么简单的东西说得过去吗？』
 
-在旁边吃瓜的这群人，可能是胜任者或者是精通者，以它们的角度，若你的课程没有将学教到一定程度（通常就是它们这些人的程度）就是敛财。
+在旁边吃瓜的这群人，可能是胜任者或者是精通者，以它们的角度，若你的课程没有将学教到一定程度（通常就是它们这些人的程度）就是敛财。
 
 隔壁看戏的人声音很大，甚至会影响舆论，还会洗脑到学生觉得老师若是只教 SOP 真的是不负责任。逼老师加内容加到学生反而学不会，最后这么课反而变成烂课。
 
-这种戏码甚至可能常常会在行业社群上演。某某大师收个几万的课，被旁边看戏的吐「我收三千就能教会你，他收三万肯定敛财」。但是会这样吐的人，他的课往往是连三千都不值的。
+这种戏码甚至可能常常会在行业社群上演。某某大师收个几万的课，被旁边看戏的吐「我收三千就能教会你，他收三万肯定敛财」。但是会这样吐的人，他的课往往是连三千都不值的。
 
 ### 成才率才是真视角
 
 若你的课真的要长销，有口碑。罪恶感、同行评论，其实真的都不是你该 care 的事。
 
-你该 care 的是『成才率』。只有这课能成才，其他的一切才能发生。
+你该 care 的是『成才率』。只有这课能成才，其他的一切才能发生。
 
 什么叫做好的课，就是学生上课的时候听得懂，能成才。上课后，学生作为一个新手或高级新手，可以解决行业基本问题。
 
@@ -155,9 +155,9 @@
 
 譬如，“高阶文案写作课程”在市场上有立刻变现的能力，属于高价且抢手的课程，而教授一般的“写作课程”，基本上就只能领基础时薪。
 
-所以开课之前，最好先搞清定位。先定位自己要开什么课，不定位的话，潜在客户很难判定你的价值所做。
+所以开课之前，最好先搞清定位。先定位自己要开什么课，不定位的话，潜在客户很难判定你的价值所做。
 
-当然，稀缺时代，只要你有技能，价格随你开。但市场稀缺度会随越来越多人涌入这市场很变化。在非稀缺时代，或破局时期，要开课最好先做出明确定位。
+当然，稀缺时代，只要你有技能，价格随你开。但市场稀缺度会随越来越多人涌入这市场很变化。在非稀缺时代，或破局时期，要开课最好先做出明确定位。
 
 这里分享一个我自己开课用的策略，「场景、痛点、KPI」。
 
@@ -171,15 +171,15 @@
 
 但是我当时并没有很高意愿。再来，招生也要够人阿。总不可能只有小猫几只我就开课。因为我朋友承诺帮忙招生。他们就很够义气的找了二十个人。就成了我的第一班。
 
-效果真的还蛮好的。当时第一班很多人毕业就找到了工作。我要平台创业的念头突然动摇了：「为什么我要去软件创业，而不教课。创业还不能稳定赚这么多钱啊」
+效果真的还蛮好的。当时第一班很多人毕业就找到了工作。我要平台创业的念头突然动摇了：「为什么我要去软件创业，而不教课。创业还不能稳定赚这么多钱啊」
 
-正好当时我想练「增长黑客」这门技巧，我想说要练总要有标的可以练，于是我想想，那就来对「 Rails 课」做增长练习吧。才踏上了开课这条路。
+正好当时我想练「增长黑客」这门技巧，我想说要练总要有标的可以练，于是我想想，那就来对「 Rails 课」做增长练习吧。才踏上了开课这条路。
 
-我开始的第一梯就是材料课，就是我把以前训练徒弟的方法，ＳＯＰ列出来，看他们想学什么就教什么。每星期按照需求写教材。教教朋友可以，但如果要做成事业就不能这样了。
+我开始的第一梯就是材料课，就是我把以前训练徒弟的方法，ＳＯＰ列出来，看他们想学什么就教什么。每星期按照需求写教材。教教朋友可以，但如果要做成事业就不能这样了。
 
 我开班第二次招两周满，到后来几小时就满，开一次课就可以赚两百万台币甚至更多，为什么可以这样呢？
 
-#### 市场调查：场景、痛点、KPI
+#### 市场调查：场景、痛点、KPI
 
 开课的时候，我去做市场调查。
 
@@ -187,13 +187,13 @@
 
 那我又问『为什么你们没被录取呢？』它们说外面的老板就问他们『你们会不会接金流？』，他们当然不会啊，当场就没有被录取。
 
-然后还有哪些问题呢？网路上虽然有很多自学教材，但是都是教ToDo App 一类的题目。结果老板叫他写一个复杂的功能，当然不会，然后就被Fired了。
+然后还有哪些问题呢？网路上虽然有很多自学教材，但是都是教ToDo App 一类的题目。结果老板叫他写一个复杂的功能，当然不会，然后就被Fired了。
 
 而拆需求是要练的，有人带你拆需求，学会拆需求你才能自由自在地写东西，这是要练的。
 
 第三个显著挫折点，是自学时，遇到很多问题，但问业界的程序员，往往会收到『你是智障吗？』的眼神。
 
-我就用这些显著需求设计一个全新的编程班，效果是除了可以自己独立做出网站，会懂接金流的，上完课后保证懂拆需求。
+我就用这些显著需求设计一个全新的编程班，效果是除了可以自己独立做出网站，会懂接金流的，上完课后保证懂拆需求。
 
 别人上课第一堂是教基本语法。我不是。我第一堂课上课教学生怎么拆需求，怎么发问。知道要怎么样定义问题，怎么向人求助而不被拒绝。
 
@@ -216,7 +216,7 @@
 
 所以我当时课也刚好很巧妙的设计成：学生需要上课一个月，收费也是一个月的薪水
 
-这样的定价与时间是用户最高可以付的成本，而且他愿意付的成本符合我的价值。我开课前，上班一个月领三十万台币的薪水了。如果要开一个班，收入肯定要高于我上班薪水。
+这样的定价与时间是用户最高可以付的成本，而且他愿意付的成本符合我的价值。我开课前，上班一个月领三十万台币的薪水了。如果要开一个班，收入肯定要高于我上班薪水。
 
 不是世界上所有问题都值得解，有钱赚的才能解。
 
@@ -230,7 +230,7 @@
 
 当时大量的人质疑这个课程真的有效吗？
 
-为什么我这样设计呢？这是因为我发现绝大多数学生都是上班族，上班族一周只有一个晚上可以学习。
+为什么我这样设计呢？这是因为我发现绝大多数学生都是上班族，上班族一周只有一个晚上可以学习。
 
 所以我设计成每周来上课一次，三个小时。
 
@@ -238,13 +238,13 @@
 
 为什么要这样设计呢？
 
-1. 学编程靠得是练习，要练才会，不写作业绝对不会。
-2. 我讲解知识，学生肯定也不会写。所以一定要给模版让他参考用。
+1. 学编程靠得是练习，要练才会，不写作业绝对不会。
+2. 我讲解知识，学生肯定也不会写。所以一定要给模版让他参考用。
 3. 所以上课就是讲解这些知识点，下课教作业。
 
 当时我开课还有一个特殊点，我坚持只在周一晚上开课。而非常见的周末时段。
 
-这是因为我要留给学生足够的时间写作业。我礼拜二、礼拜四 host 了 Ruby 聚会，学生可以参加聚会，写作业，并且找到助教帮忙排除 debug。每周五我会给答案，如果你还是不会写，可以在周末死嗑写答案，把它写完。
+这是因为我要留给学生足够的时间写作业。我礼拜二、礼拜四 host 了 Ruby 聚会，学生可以参加聚会，写作业，并且找到助教帮忙排除 debug。每周五我会给答案，如果你还是不会写，可以在周末死嗑写答案，把它写完。
 
 再次强调，编程不是用看的就能学会，一定要练习。如果我把课开在周末，学生根本不会有时间写作业，也懒得写作业。这是我为什么选择周一开课的原因。
 
@@ -258,7 +258,7 @@
 
 定位的问题解了之后，百分之五十的问题就解了。
 
-## 成果定位：作业可炫耀、可传播
+## 成果定位：作业可炫耀、可传播
 
 整个课，传授只占了 60%。另外 40% 是作业。
 
