--- a/01.md
+++ b/01.md
@@ -244,9 +244,13 @@
 
 当时我开课还有一个特殊点，我坚持只在周一晚上开课。而非常见的周末时段。
 
-这是因为我要留给学生足够的时间写作业。我礼拜二、礼拜四 host 了 Ruby 聚会，学生可以参加聚会，写作业，并且找到助教帮忙排除 debug。每周五我会给答案，如果你还是不会写，可以在周末死嗑写答案，把它写完。
+这是因为我要留给学生足够的时间写作业。
 
-再次强调，编程不是用看的就能学会，一定要练习。如果我把课开在周末，学生根本不会有时间写作业，也懒得写作业。这是我为什么选择周一开课的原因。
+我礼拜二、礼拜四 host 了 Ruby 聚会，学生可以参加聚会，写作业，并且找到助教帮忙排除 debug。每周五我会给答案，如果你还是不会写，可以在周末死嗑写答案，把它写完。
+
+再次强调，编程不是用看的就能学会，一定要练习。
+
+如果我把课开在周末，学生根本不会有时间写作业，也懒得写作业。这是我为什么选择周一开课的原因。
 
 这是 Rails 课程设计的来龙去脉。
 
@@ -275,6 +279,8 @@
 
 学生只记得你很厉害，但说不出来厉害在哪里。缺少口碑就会造成传播上的困扰。
 
-如果有一千个人是你的目标族群，只有一百个人会注意你，一开始只有二十三十个人报名。其他人都在观望。观望什么呢？观望是不是会出成果。出成果是什么呢？有具体的东西（网站）而且他周遭的人真的可以感到他学习的变化。
+如果有一千个人是你的目标族群，只有一百个人会注意你，一开始只有二十三十个人报名。其他人都在观望。
+
+观望什么呢？观望是不是会出成果。出成果是什么呢？有具体的东西（网站）而且他周遭的人真的可以感到他学习的变化。
 
 我们会在接续的章节，接著传授如何让学生通得懂、学得会、可转述、作业可炫耀。
