--- a/01.md
+++ b/01.md
@@ -67,9 +67,9 @@
 
 需求分成三种：痛点、痒点和盲点。
 
-*痛点*，触及的问题，是用户长期无法解决，并且感到痛苦的点。
-*痒点*，触及的问题不大不小，能解决更好，没解决也会被淡忘。
-*盲点*，用户不觉是问题，或认为解决的成本太高，需求在沉睡。
+* *痛点*，触及的问题，是用户长期无法解决，并且感到痛苦的点。
+* *痒点*，触及的问题不大不小，能解决更好，没解决也会被淡忘。
+* *盲点*，用户不觉是问题，或认为解决的成本太高，需求在沉睡。
 
 原料课之所以卖不好的问题是，新手老师脑袋里面是没有用户需求的这个概念的。
 
