--- a/01.md
+++ b/01.md
@@ -101,11 +101,11 @@
 
 其实，若按照德雷福斯模型，从新手到专家必须经历的 5个阶段：
 　
- *新手*（novice）
- *高级新手*（advanced beginner）
- *胜任者*（competent）
- *精通者*（proficient）
- *专家*（expert）
+ * *新手*（novice）
+ * *高级新手*（advanced beginner）
+ * *胜任者*（competent）
+ * *精通者*（proficient）
+ * *专家*（expert）
 
 绝大多数拜师的人，他只想要学会并且有机会达成的阶段。是从入门 => 新手。或者是新手 => 高级新手。
 
