--- a/01.md
+++ b/01.md
@@ -145,11 +145,11 @@
 
 标准是，如果越能协助客户解决特定的实际问题，或是越能让客户拥有变现能力，则课程的收费往往可以越高。
 
-*高价课程*，例如编程课程、营销课程、运营课程、理财课程……，这类课程通常有助于使用者快速地变现、谋职，或是解决实际会发生的问题。
+* *高价课程*，例如编程课程、营销课程、运营课程、理财课程……，这类课程通常有助于使用者快速地变现、谋职，或是解决实际会发生的问题。
 　
-*中价课程*，例如品酒课程、赏析课程、健身课程、乐器课程……，这类课程通常有助于彰显使用者的身分与品味，间接有助于使用者的社会交际。
+* *中价课程*，例如品酒课程、赏析课程、健身课程、乐器课程……，这类课程通常有助于彰显使用者的身分与品味，间接有助于使用者的社会交际。
 　
-*低价课程*，例如写作课程、国学课程、大部分社区大学的课程……，这类课程通常让使用者打发时间，没有上也无所谓，定价很难调高。
+* *低价课程*，例如写作课程、国学课程、大部分社区大学的课程……，这类课程通常让使用者打发时间，没有上也无所谓，定价很难调高。
 
 另外，同一门学问因为不同场景，通常也可以产生不同的价格。　
 
