--- a/01.md
+++ b/01.md
@@ -284,3 +284,11 @@
 观望什么呢？观望是不是会出成果。出成果是什么呢？有具体的东西（网站）而且他周遭的人真的可以感到他学习的变化。
 
 我们会在接续的章节，接著传授如何让学生通得懂、学得会、可转述、作业可炫耀。
+
+## 总结
+
+我们可以将上述归纳成“定位、定义、定价”，三阶段公式：
+
+* 先定位出“场景”、“痛点”、“KPI”，
+* 才可以定义好“结构”、“模板”，
+* 进而能定价出“收费”、“时程”。
