--- a/01.md
+++ b/01.md
@@ -155,7 +155,7 @@
 
 譬如，“高阶文案写作课程”在市场上有立刻变现的能力，属于高价且抢手的课程，而教授一般的“写作课程”，基本上就只能领基础时薪。
 
-所以开课之前，最好先搞清定位。先定位自己要开什么课，不定位的话，潜在客户很难判定你的价值所做。
+所以开课之前，最好先搞清定位。先定位自己要开什么课，不定位的话，潜在客户很难判定你的价值所在。
 
 当然，稀缺时代，只要你有技能，价格随你开。但市场稀缺度会随越来越多人涌入这市场很变化。在非稀缺时代，或破局时期，要开课最好先做出明确定位。
 
