--- a/01.md
+++ b/01.md
@@ -175,7 +175,7 @@
 
 正好当时我想练「增长黑客」这门技巧，我想说要练总要有标的可以练，于是我想想，那就来对「 Rails 课」做增长练习吧。才踏上了开课这条路。
 
-我开始的第一梯就是材料课，就是我把以前训练徒弟的方法，ＳＯＰ列出来，看他们想学什么就教什么。每星期按照需求写教材。教教朋友可以，但如果要做成事业就不能这样了。
+我开始的第一梯就是材料课，就是我把以前训练徒弟的方法，ＳＯＰ列出来，看他们想学什么就教什么。每星期按照需求写教材。不过，教教朋友可以这样开，但如果要做成事业就不能这样了。
 
 我开班第二次招两周满，到后来几小时就满，开一次课就可以赚两百万台币甚至更多，为什么可以这样呢？
 
