--- a/01.md
+++ b/01.md
@@ -189,7 +189,7 @@
 
 然后还有哪些问题呢？网路上虽然有很多自学教材，但是都是教ToDo App 一类的题目。结果老板叫他写一个复杂的功能，当然不会，然后就被Fired了。
 
-而拆需求是要练的，有人带你拆需求，学会拆需求你才能自由自在地写东西，这是要练的。
+拆需求是要练的，有人带你拆需求，学会拆需求你才能自由自在地写东西，但这个技能需要场景大量练习。
 
 第三个显著挫折点，是自学时，遇到很多问题，但问业界的程序员，往往会收到『你是智障吗？』的眼神。
 
