--- a/01.md
+++ b/01.md
@@ -201,7 +201,7 @@
 
 学生会了这些之后，面试就会很容易的找到工作。满足特定的ＫＰＩ。
 
-学ＲＡＩＬＳ也是有场景的，有人要创业、有人要找工作的、有人是要圆梦作自己网站。
+学 Rails 也是有目标场景的，有人要创业、有人要找工作的、有人是要圆梦作自己网站。
 
 我当然优先解决可以帮人赚钱的目标。这样这门课才能够收更高的学费。
 
