--- a/01.md
+++ b/01.md
@@ -248,6 +248,8 @@
 
 我礼拜二、礼拜四 host 了 Ruby 聚会，学生可以参加聚会，写作业，并且找到助教帮忙排除 debug。每周五我会给答案，如果你还是不会写，可以在周末死嗑写答案，把它写完。
 
+学生上完感想是太操了，而不是课程内容太少...
+
 再次强调，编程不是用看的就能学会，一定要练习。
 
 如果我把课开在周末，学生根本不会有时间写作业，也懒得写作业。这是我为什么选择周一开课的原因。
